web-infras/parser/tests/fixtures/esprima/es2017/async/invalid-await/invalid-await-property/output.txt
[SyntaxError]: Missing semicolon or line terminator. (1,7)
1|async f() { x = { async await(){} } }
 |     ^
[SyntaxError]: Missing semicolon or line terminator. (1,11)
1|async f() { x = { async await(){} } }
 |         ^
